<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPrincipal"
    android:orientation="vertical"
    android:background="@drawable/pose01">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/titulo"
        android:gravity="center"
        android:focusableInTouchMode="true"
        android:textStyle="bold"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/degradado2"
        >

        <View
            android:layout_width="150dp"
            android:layout_height="5dp"
            android:background="@color/black"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal">

        </View>

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/share_64"
                android:layout_margin="5dp"
                />
            <ImageButton
                android:id="@+id/ibAbrirPaginaWeb"
                android:background="#00000000"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/facebook"
                android:layout_margin="5dp"/>
            <ImageButton
                android:id="@+id/id"
                android:background="#00000000"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/whatsapp"
                android:layout_margin="5dp"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:gravity="center"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <Button
                    android:id="@+id/btnIniciar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txtTitle"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/boton"
                    android:text="@string/menu__Inicio"/>
                <Button
                    android:id="@+id/btnCreditos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txtTitle"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/boton"
                    android:text="@string/menu_creditos"/>
                <Button
                    android:id="@+id/btnSalir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txtTitle"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/boton"
                    android:text="@string/menu_salir"/>
            </LinearLayout>

            <View
                android:layout_width="150dp"
                android:layout_height="5dp"
                android:background="@color/black"
                android:layout_margin="10dp"
                android:layout_gravity="center_horizontal">

            </View>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="0dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info1"
                android:textSize="11sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info2"
                android:textSize="11sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info3"
                android:textSize="11sp"
                android:textStyle="bold"/>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:gravity="center"
            android:text="2018"/>
    </LinearLayout>

</LinearLayout>