<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu_2"
    android:orientation="vertical"
    android:background="@drawable/pose01">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/degradado2">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/titulo"
            android:gravity="center"
            android:focusableInTouchMode="true"
            android:textStyle="bold"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            >
            <Button
                android:id="@+id/btnHistoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/txtTitle"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="25dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/boton"
                android:text="@string/historia"
                />
            <Button
                android:id="@+id/btnPartesCueca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/txtTitle"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="25dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/boton"
                android:text="@string/partesCueca"
                />

            <Button
                android:id="@+id/btnMusica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/txtTitle"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="25dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/boton"
                android:text="@string/musicaDepts"
                />
        </LinearLayout>


        <ImageButton

            android:onClick="atras2"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:background="#00000000"
            android:src="@drawable/back_64_1"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="5dp"

            />

    </LinearLayout>

</LinearLayout>